# mvn-settings-management

./: .gitignore  PRODUCT.md  README.md  index.html  package-lock.json  package.json  styles.css  vite.config.ts
docs/: 使用说明.md  发布说明-v0.1.0.md
packaging/windows/: maven-settings-management.nsi
src/: App.tsx  settingsXml.ts  tauriApi.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: installer-hooks.nsh
