[package]
name = "mvn-settings-management"
version = "0.2.0"
description = "Maven local settings management client"
authors = ["ljc"]
edition = "2021"

[lib]
name = "mvn_settings_management_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
